# kolada_mcp

./: .dockerignore  .gcloudignore  .gitignore  CHATGPT_SETUP.md  DEPLOY_CLOUDRUN.md  DEPLOY_MCP.md  DEPLOY_OPTIONS.md  DEPLOY_RAILWAY.md  Dockerfile  Dockerfile.cloudrun  Dockerfile.http  Dockerfile.mcp  NEXT_STEPS.md  RAILWAY_DEPLOY.md  README.md  SETUP_COMPLETE.md  SNABBGUIDE.md  cloudbuild-mcp.yaml  cloudbuild.yaml  hello.py  kolada-mcp.py  kpis.py  main.py  openapi.json  pyproject.toml  run_http_server.py  setup.py  start_kolada.bat  test_search.py
.github/workflows/: release.yml
app/: Info.plist  kolada_mcp_mac_app.py
kolada_mcp/: __init__.py  kolada_mcp.py  server.py
kolada_mcp/lifespan/: context.py
kolada_mcp/models/: types.py
kolada_mcp/services/: api.py  data_processing.py  embeddings.py
kolada_mcp/tools/: comparison_tools.py  data_tools.py  metadata_tools.py
kolada_mcp/utils/: context.py
reference/pykolada/: pykolada.py
src/: server.py
src/kolada_mcp/: __init__.py  config.py  http_server.py  mcp_server.py  server.py
src/kolada_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/kolada_mcp/services/: embeddings.py
src/services/: data_processing.py
src/tools/: comparison_tools.py  data_tools.py  municipality_tools.py
tests/: conftest.py  smoke_test.py  test_api.py  test_tools.py  test_utils.py
