[project]
name = "kolada-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "numpy>=2.2.4",
    "polars>=1.26.0",
    "py2app>=0.28.8",
    "sentence-transformers>=4.0.1",
    "setuptools>=78.1.0",
    "statistics>=1.0.3.5",
    "wheel>=0.45.1",
]
