[project]
name = "kolada-mcp"
version = "0.1.0"
description = "MCP server exposing Kolada data via koladapy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.0",
    "koladapy @ git+https://github.com/xemarap/koladapy@main",
    "uvicorn>=0.32.0",
]

[project.scripts]
kolada-mcp = "kolada_mcp.server:main"

